--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
-
+        /* 
+        Shorthhand - background
+        
+        color > image > position > repeat > [size] > attachment
+        */
         body {
             height: 100vh;
-            background-color: black;
-            background-image: url('imagens/wallpaper002.jpg');
-            background-position: center center;
-            background-repeat: no-repeat;
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -30,6 +31,15 @@
     <main>
         <h1>Teste de Imagen de Fundo</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, cupiditate. Commodi ea, distinctio, error provident doloremque eveniet iste voluptates hic tenetur ducimus, adipisci ad? Doloribus possimus et sapiente rem voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque eum culpa, ipsam maiores perferendis animi provident labore repellat placeat illum tempore aliquid consectetur cupiditate soluta, amet qui fuga. In, dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quam excepturi ducimus fugiat, itaque nulla atque tempore, ratione adipisci repudiandae pariatur velit molestias magnam exercitationem, possimus natus beatae? Harum, nemo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, cupiditate. Commodi ea, distinctio, error provident doloremque eveniet iste voluptates hic tenetur ducimus, adipisci ad? Doloribus possimus et sapiente rem voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque eum culpa, ipsam maiores perferendis animi provident labore repellat placeat illum tempore aliquid consectetur cupiditate soluta, amet qui fuga. In, dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quam excepturi ducimus fugiat, itaque nulla atque tempore, ratione adipisci repudiandae pariatur velit molestias magnam exercitationem, possimus natus beatae? Harum, nemo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, cupiditate. Commodi ea, distinctio, error provident doloremque eveniet iste voluptates hic tenetur ducimus, adipisci ad? Doloribus possimus et sapiente rem voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque eum culpa, ipsam maiores perferendis animi provident labore repellat placeat illum tempore aliquid consectetur cupiditate soluta, amet qui fuga. In, dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quam excepturi ducimus fugiat, itaque nulla atque tempore, ratione adipisci repudiandae pariatur velit molestias magnam exercitationem, possimus natus beatae? Harum, nemo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, cupiditate. Commodi ea, distinctio, error provident doloremque eveniet iste voluptates hic tenetur ducimus, adipisci ad? Doloribus possimus et sapiente rem voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque eum culpa, ipsam maiores perferendis animi provident labore repellat placeat illum tempore aliquid consectetur cupiditate soluta, amet qui fuga. In, dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quam excepturi ducimus fugiat, itaque nulla atque tempore, ratione adipisci repudiandae pariatur velit molestias magnam exercitationem, possimus natus beatae? Harum, nemo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, cupiditate. Commodi ea, distinctio, error provident doloremque eveniet iste voluptates hic tenetur ducimus, adipisci ad? Doloribus possimus et sapiente rem voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque eum culpa, ipsam maiores perferendis animi provident labore repellat placeat illum tempore aliquid consectetur cupiditate soluta, amet qui fuga. In, dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quam excepturi ducimus fugiat, itaque nulla atque tempore, ratione adipisci repudiandae pariatur velit molestias magnam exercitationem, possimus natus beatae? Harum, nemo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, cupiditate. Commodi ea, distinctio, error provident doloremque eveniet iste voluptates hic tenetur ducimus, adipisci ad? Doloribus possimus et sapiente rem voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque eum culpa, ipsam maiores perferendis animi provident labore repellat placeat illum tempore aliquid consectetur cupiditate soluta, amet qui fuga. In, dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quam excepturi ducimus fugiat, itaque nulla atque tempore, ratione adipisci repudiandae pariatur velit molestias magnam exercitationem, possimus natus beatae? Harum, nemo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, cupiditate. Commodi ea, distinctio, error provident doloremque eveniet iste voluptates hic tenetur ducimus, adipisci ad? Doloribus possimus et sapiente rem voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque eum culpa, ipsam maiores perferendis animi provident labore repellat placeat illum tempore aliquid consectetur cupiditate soluta, amet qui fuga. In, dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quam excepturi ducimus fugiat, itaque nulla atque tempore, ratione adipisci repudiandae pariatur velit molestias magnam exercitationem, possimus natus beatae? Harum, nemo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, cupiditate. Commodi ea, distinctio, error provident doloremque eveniet iste voluptates hic tenetur ducimus, adipisci ad? Doloribus possimus et sapiente rem voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque eum culpa, ipsam maiores perferendis animi provident labore repellat placeat illum tempore aliquid consectetur cupiditate soluta, amet qui fuga. In, dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quam excepturi ducimus fugiat, itaque nulla atque tempore, ratione adipisci repudiandae pariatur velit molestias magnam exercitationem, possimus natus beatae? Harum, nemo.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, cupiditate. Commodi ea, distinctio, error provident doloremque eveniet iste voluptates hic tenetur ducimus, adipisci ad? Doloribus possimus et sapiente rem voluptates! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Doloremque eum culpa, ipsam maiores perferendis animi provident labore repellat placeat illum tempore aliquid consectetur cupiditate soluta, amet qui fuga. In, dignissimos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora quam excepturi ducimus fugiat, itaque nulla atque tempore, ratione adipisci repudiandae pariatur velit molestias magnam exercitationem, possimus natus beatae? Harum, nemo.</p>
+
     </main>
 
 </body>
