--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -11,20 +11,20 @@
 
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
         }
 
-        tr.linha {
-            background-color: gray;
-        }
 
         td {
             border: 1px solid black;
             padding: 8px;
+            text-align: center;/* Alinhamento horizontal */
+            vertical-align: middle; /* Alinhamento veritcal */
         }
 
-        td.dado {
-            background-color: yellow;
+        .numero {
+            text-align: right;
         }
 
     </style>
@@ -49,13 +49,13 @@
         <tr class="linha"> <!-- Segunda linha -->
             <td>A2</td>
             <td>B2</td>
-            <td>C2</td>
+            <td class="numero">C2</td>
         </tr>
 
         <tr> <!-- Terceira linha -->
             <td>A3</td>
             <td>B3</td>
-            <td>C3</td>
+            <td class="numero">C3</td>
         </tr>
 
         <tr> <!-- Quarta linha -->
