--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -12,6 +12,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -31,6 +32,12 @@
             color: white;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
         td.num {
             text-align: right;
         }
@@ -42,6 +49,16 @@
         .colunaest {
             width: 450px;
         }
+
+        tbody tr:nth-child(odd) { /* 2n-1 */
+            background-color: white;
+        }
+
+        tbody tr:nth-child(even) { /* 2n */
+            background-color: lightgrey;
+        }
+
+
     </style>
 </head>
 <body>
@@ -185,5 +202,41 @@
             </tr>
         </tfoot>
     </table>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur odit quae maxime deleniti soluta esse officiis expedita, quo quas voluptatem commodi accusantium consequatur eius nostrum minus, fuga numquam dignissimos.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quos repudiandae tempore sed architecto, fugiat commodi dolores enim libero voluptas blanditiis quaerat asperiores aperiam, corrupti nihil sapiente? Similique, pariatur! Itaque.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sint nam beatae sequi ducimus cupiditate mollitia ipsa labore eligendi iste error aperiam blanditiis unde velit autem sed nostrum, nihil saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem id maiores sequi. Reprehenderit totam maxime ab atque amet. Consectetur quae ea distinctio vitae non, quod voluptate fugiat iure nemo nihil?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur odit quae maxime deleniti soluta esse officiis expedita, quo quas voluptatem commodi accusantium consequatur eius nostrum minus, fuga numquam dignissimos.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quos repudiandae tempore sed architecto, fugiat commodi dolores enim libero voluptas blanditiis quaerat asperiores aperiam, corrupti nihil sapiente? Similique, pariatur! Itaque.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sint nam beatae sequi ducimus cupiditate mollitia ipsa labore eligendi iste error aperiam blanditiis unde velit autem sed nostrum, nihil saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem id maiores sequi. Reprehenderit totam maxime ab atque amet. Consectetur quae ea distinctio vitae non, quod voluptate fugiat iure nemo nihil?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur odit quae maxime deleniti soluta esse officiis expedita, quo quas voluptatem commodi accusantium consequatur eius nostrum minus, fuga numquam dignissimos.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quos repudiandae tempore sed architecto, fugiat commodi dolores enim libero voluptas blanditiis quaerat asperiores aperiam, corrupti nihil sapiente? Similique, pariatur! Itaque.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sint nam beatae sequi ducimus cupiditate mollitia ipsa labore eligendi iste error aperiam blanditiis unde velit autem sed nostrum, nihil saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem id maiores sequi. Reprehenderit totam maxime ab atque amet. Consectetur quae ea distinctio vitae non, quod voluptate fugiat iure nemo nihil?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur odit quae maxime deleniti soluta esse officiis expedita, quo quas voluptatem commodi accusantium consequatur eius nostrum minus, fuga numquam dignissimos.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quos repudiandae tempore sed architecto, fugiat commodi dolores enim libero voluptas blanditiis quaerat asperiores aperiam, corrupti nihil sapiente? Similique, pariatur! Itaque.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sint nam beatae sequi ducimus cupiditate mollitia ipsa labore eligendi iste error aperiam blanditiis unde velit autem sed nostrum, nihil saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem id maiores sequi. Reprehenderit totam maxime ab atque amet. Consectetur quae ea distinctio vitae non, quod voluptate fugiat iure nemo nihil?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur odit quae maxime deleniti soluta esse officiis expedita, quo quas voluptatem commodi accusantium consequatur eius nostrum minus, fuga numquam dignissimos.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quos repudiandae tempore sed architecto, fugiat commodi dolores enim libero voluptas blanditiis quaerat asperiores aperiam, corrupti nihil sapiente? Similique, pariatur! Itaque.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sint nam beatae sequi ducimus cupiditate mollitia ipsa labore eligendi iste error aperiam blanditiis unde velit autem sed nostrum, nihil saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem id maiores sequi. Reprehenderit totam maxime ab atque amet. Consectetur quae ea distinctio vitae non, quod voluptate fugiat iure nemo nihil?
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum pariatur odit quae maxime deleniti soluta esse officiis expedita, quo quas voluptatem commodi accusantium consequatur eius nostrum minus, fuga numquam dignissimos.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit quos repudiandae tempore sed architecto, fugiat commodi dolores enim libero voluptas blanditiis quaerat asperiores aperiam, corrupti nihil sapiente? Similique, pariatur! Itaque.
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et sint nam beatae sequi ducimus cupiditate mollitia ipsa labore eligendi iste error aperiam blanditiis unde velit autem sed nostrum, nihil saepe?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem id maiores sequi. Reprehenderit totam maxime ab atque amet. Consectetur quae ea distinctio vitae non, quod voluptate fugiat iure nemo nihil?
+    </p>
 </body>
 </html>
